<resources>
    <string name="app_name">TV Tracker</string>
    <string name="facebook_app_id">643705419146820</string>
    <string name="fb_login_protocol_scheme">fb643705419146820</string>
    <string name="google_login">Log in with Google</string>

    <string name="fragment_home">Home</string>
    <string name="fragment_calendar">Calendar</string>
    <string name="fragment_favourites">Favourites</string>
    <string name="fragment_search">Search</string>
    <string name="fragment_preferences">Preferences</string>
    <string name="fragment_series">Series details</string>
    <string name="fragment_episode_details">Episode details</string>
    <string name="fragment_suggested">Suggested</string>
    <string name="fragment_about">About</string>
    <string name="fragment_series_details_description">Description</string>
    <string name="fragment_series_details_episodes">Episodes</string>
    <string name="logout_button">Logout</string>

    <string name="preference_images_title">Image downloading</string>
    <string name="preference_images_summary">Specify when to download images within the app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_youtube">Watch trailer on YouTube</string>
    <string name="action_seriesDetails">Go to series details</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to episode details -->
    <string name="episode_info">Episode info</string>
    <string name="episode_series">Series:\u0020</string>
    <string name="episode_season">Season:\u0020</string>
    <string name="episode_number">Episode:\u0020</string>
    <string name="episode_airdate">Airdate:\u0020</string>
    <string name="episode_runtime">Runtime:\u0020</string>
    <string name="episode_runtime_unit">\u0020minutes</string>

    <!-- Strings related to series details -->
    <string name="series_info">Series info</string>
    <string name="series_name">Title:\u0020</string>
    <string name="series_premiered">Premiered:\u0020</string>
    <string name="series_genres">Genres:\u0020</string>
    <string name="series_status">Status:\u0020</string>
    <string name="series_network">Network:\u0020</string>
    <string name="series_runtime">Runtime:\u0020</string>
    <string name="series_runtime_unit">\u0020minutes</string>
    <string name="series_rating">Rating:\u0020</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="about_info">TVTracker is an app that helps you track your favourites TV shows
        on your Android devices. We provide convenient calendar and notifications an hour before
        episode premiere, so you won\'t miss anything.\n\nAll data about TV programs is provided
        by TVmaze under the CC BY-SA license. For more informations, news or discussions visit
        TVmaze website\n\nhttp://www.tvmaze.com/
    </string>

    <string name="network_dialog_title">Internet connection</string>
    <string name="network_dialog_message">TVTracker requires internet connection</string>
    <string name="login_dialog_title">Server error</string>
    <string name="login_dialog_message">Could not connect to server. Retrying...</string>

    <string name="pref_notifications">pref_notifications</string>
    <string name="home_splash_text">Oops... You seem to have no shows in favourites or none of them
        have upcoming episodes.\n\nVisit Suggested or Search to find new shows!</string>

    <string name="favourites_splash_text">You seem to have no shows in favourites.\n\n
        Visit Suggested or Search to find new shows!</string>

    <string name="undo_string">UNDO</string>
</resources>
